# codenames

./: Makefile  README.md  exploration.py  filter_glove_840b_to_accepted.py  notes.md  pyproject.toml  requirements.txt
src/: exploration_two.py  parse_webster_dict.py
src/codenames/: codenames.py  exploration_three.py  main.py
